# Playwright_with_Python_DEMO

./: .gitignore  README.md  main.py  pyproject.toml
pageobject/WooCommerce/: base_page.py  login_page.py
pageobject/WooCommerce/store/: checkout.py
tests/: functions.py  test_woocommerce.py
